--- a/de.upb.swt.soot.java.core/pom.xml
+++ b/de.upb.swt.soot.java.core/pom.xml
@@ -12,14 +12,17 @@
     <version>4.0.0-SNAPSHOT</version>
   </parent>
 
-    <dependencies>
-
+  <dependencies>
     <dependency>
-        <groupId>de.upb.swt</groupId>
-        <artifactId>soot.core</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+      <groupId>de.upb.swt</groupId>
+      <artifactId>soot.core</artifactId>
+      <version>4.0.0-SNAPSHOT</version>
     </dependency>
-
-    </dependencies>
+    <dependency>
+      <groupId>org.jgrapht</groupId>
+      <artifactId>jgrapht-core</artifactId>
+      <version>1.3.0</version>
+    </dependency>
+  </dependencies>
 
 </project>
