--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,48 +9,48 @@ on:
   pull_request:
     branches: [ develop ]
 
-jobs: 
+jobs:
   JDK8:
 
     runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Check Format
-      run: mvn com.coveo:fmt-maven-plugin:check -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
-    - name: Build (JDK8)
-      run: mvn clean compile -B -Dfmt.skip -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
-    - name: Test (JDK8)
-      run: mvn verify -B -Dfmt.skip -PJava8 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
-    - name: Prepare Coverage and Test Reports
-      env: 
-        SUBMODULES: de.upb.swt.soot.java.core de.upb.swt.soot.java.bytecode de.upb.swt.soot.java.sourcecode de.upb.swt.soot.callgraph examples de.upb.swt.soot.tests
-      run: |
-           sudo mkdir target/coverage-reports-jdk8
-           sudo mkdir target/test-reports-jdk8
-           sudo chmod -R 777 target 
-           for item in $SUBMODULES
-           do 
-             sudo mv ${item}/target/coverage-reports/jacoco-ut.exec target/coverage-reports-jdk8/jacoco-ut-${item}-jdk8.exec
-             sudo [ ! -f ${item}/target/surefire-reports ] || mv ${item}/target/surefire-reports target/test-reports-jdk8/test-report-${item}/
-             sudo mkdir target/coverage-reports-jdk8/${item}-site
-             sudo mv ${item}/target/site/jacoco-ut/* target/coverage-reports-jdk8/${item}-site
-           done
-     
-    - uses: actions/upload-artifact@v2
-      with:
-        name: coverage-reports-jdk8
-        path: target/coverage-reports-jdk8
 
-    - uses: actions/upload-artifact@v2
-      with:
-        if: always()
-        name: test-reports-jdk8
-        path: target/test-reports-jdk8
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Check Format
+        run: mvn com.coveo:fmt-maven-plugin:check -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+      - name: Build (JDK8)
+        run: mvn clean compile -B -Dfmt.skip -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+      - name: Test (JDK8)
+        run: mvn -pl de.upb.swt.soot.core,de.upb.swt.soot.java.core,de.upb.swt.soot.java.bytecode,de.upb.swt.soot.java.sourcecode,de.upb.swt.soot.callgraph,de.upb.swt.soot.jimple.parser,examples -am verify -B -Dfmt.skip -PJava8 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+      - name: Prepare Coverage and Test Reports
+        env:
+          SUBMODULES: de.upb.swt.soot.java.core de.upb.swt.soot.java.bytecode de.upb.swt.soot.java.sourcecode de.upb.swt.soot.callgraph examples
+        run: |
+          sudo mkdir target/coverage-reports-jdk8
+          sudo mkdir target/test-reports-jdk8
+          sudo chmod -R 777 target 
+          for item in $SUBMODULES
+          do 
+            sudo mv ${item}/target/coverage-reports/jacoco-ut.exec target/coverage-reports-jdk8/jacoco-ut-${item}-jdk8.exec
+            sudo [ ! -f ${item}/target/surefire-reports ] || mv ${item}/target/surefire-reports target/test-reports-jdk8/test-report-${item}/
+            sudo mkdir target/coverage-reports-jdk8/${item}-site
+            sudo mv ${item}/target/site/jacoco-ut/* target/coverage-reports-jdk8/${item}-site
+          done
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: coverage-reports-jdk8
+          path: target/coverage-reports-jdk8
+
+      - uses: actions/upload-artifact@v2
+        with:
+          if: always()
+          name: test-reports-jdk8
+          path: target/test-reports-jdk8
 
 
   JDK9:
@@ -58,39 +58,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.9
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.9
-    - name: Build (JDK9)
-      run: mvn clean compile -B -Dfmt.skip -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
-    - name: Test (JDK9)
-      run: mvn verify -B -Dfmt.skip -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -PJava9
-    - name: Prepare Coverage Reports      
-      env: 
-        SUBMODULES: java.core java.bytecode java.sourcecode callgraph
-      run: |
-           sudo mkdir target/coverage-reports-jdk9
-           sudo mkdir target/test-reports-jdk9
-           sudo chmod -R 777 target 
-           for item in $SUBMODULES
-           do 
-             sudo mv de.upb.swt.soot.${item}/target/coverage-reports/jacoco-ut.exec target/coverage-reports-jdk9/jacoco-ut-${item}-jdk9.exec
-             sudo [ ! -f de.upb.swt.soot.${item}/target/surefire-reports ] || mv de.upb.swt.soot.${item}/target/surefire-reports target/test-reports-jdk9/test-report-${item}/
-             sudo mkdir target/coverage-reports-jdk9/${item}-site
-             sudo mv de.upb.swt.soot.${item}/target/site/jacoco-ut/* target/coverage-reports-jdk9/${item}-site
-           done
-    - uses: actions/upload-artifact@v2
-      with:
-        name: coverage-reports-jdk9
-        path: target/coverage-reports-jdk9
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.9
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.9
+      - name: Build (JDK9)
+        run: mvn clean compile -B -Dfmt.skip -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+      - name: Test (JDK9)
+        run: mvn -pl de.upb.swt.soot.core,de.upb.swt.soot.java.core,de.upb.swt.soot.java.bytecode,de.upb.swt.soot.java.sourcecode,de.upb.swt.soot.callgraph,de.upb.swt.soot.jimple.parser,examples -am verify -B -Dfmt.skip -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -PJava9
+      - name: Prepare Coverage Reports
+        env:
+          SUBMODULES: java.core java.bytecode java.sourcecode callgraph
+        run: |
+          sudo mkdir target/coverage-reports-jdk9
+          sudo mkdir target/test-reports-jdk9
+          sudo chmod -R 777 target 
+          for item in $SUBMODULES
+          do 
+            sudo mv de.upb.swt.soot.${item}/target/coverage-reports/jacoco-ut.exec target/coverage-reports-jdk9/jacoco-ut-${item}-jdk9.exec
+            sudo [ ! -f de.upb.swt.soot.${item}/target/surefire-reports ] || mv de.upb.swt.soot.${item}/target/surefire-reports target/test-reports-jdk9/test-report-${item}/
+            sudo mkdir target/coverage-reports-jdk9/${item}-site
+            sudo mv de.upb.swt.soot.${item}/target/site/jacoco-ut/* target/coverage-reports-jdk9/${item}-site
+          done
+      - uses: actions/upload-artifact@v2
+        with:
+          name: coverage-reports-jdk9
+          path: target/coverage-reports-jdk9
 
-    - uses: actions/upload-artifact@v2
-      if: always()
-      with:
-        name: test-reports-jdk9
-        path: target/test-reports-jdk9
-
-   
-      
+      - uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: test-reports-jdk9
+          path: target/test-reports-jdk9
